--- a/plugin.xml
+++ b/plugin.xml
@@ -4,36 +4,35 @@
     version="1.0.0">
 
     <name>KeyChain Plugin for Cordova iOS</name>
-    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</description>
+    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</description>
     <license>Apache 2.0</license>
-    <keywords>keychain</keywords>	
-    
+    <keywords>keychain</keywords>
+
     <engines>
         <engine name="cordova" version=">=2.2.0" />
     </engines>
-	
+
     <asset src="www/keychain.js" target="plugins/keychain.js" />
 
-	<js-module src="www/keychain.js" name="Keychain">
-    	<clobbers target="window.Keychain" />
-	</js-module>
-	
     <!-- ios -->
     <platform name="ios">
+        <js-module src="www/keychain.js" name="Keychain">
+            <clobbers target="window.Keychain" />
+        </js-module>
+
         <!-- feature tag in config.xml -->
         <config-file target="config.xml" parent="/widget">
           <feature name="Keychain">
             <param name="ios-package" value="CDVKeychain"/>
           </feature>
         </config-file>
-        
+
         <header-file src="src/ios/CDVKeychain.h" />
         <header-file src="src/ios/SFHFKeychainUtils/SFHFKeychainUtils.h"/>
-        
+
         <source-file src="src/ios/CDVKeychain.m"/>
         <source-file src="src/ios/SFHFKeychainUtils/SFHFKeychainUtils.m" compiler-flags="-fno-objc-arc" />
-        
+
         <framework src="Security.framework" />
-        
     </platform>
 </plugin>
