--- a/plugin.xml
+++ b/plugin.xml
@@ -4,15 +4,16 @@
     version="1.0.0">
 
     <name>KeyChain Plugin for Cordova iOS</name>
-    <description>This plugin allows your app access to the iOS KeyChain from Cordova. See: https://developer.apple com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html</description>
+    <description>
+        This plugin allows your app access to the iOS KeyChain from Cordova.
+        See: https://developer.apple.com/library/mac/documentation/security/conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html
+    </description>
     <license>Apache 2.0</license>
     <keywords>keychain</keywords>
 
     <engines>
-        <engine name="cordova" version=">=2.2.0" />
+        <engine name="cordova" version=">=3.0.0" />
     </engines>
-
-    <asset src="www/keychain.js" target="plugins/keychain.js" />
 
     <!-- ios -->
     <platform name="ios">
